# puara-controller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json  config.new.json  default_config.h  main.cpp  main_old.cpp  puara_controller.cpp  puara_controller.hpp  puara_joystick.cpp  puara_joystick.hpp  tester.pd
